2002-06-27  Frank Worsley  <fworsley@shaw.ca>

	* libnautilus-private/nautilus-program-choosing.c:
	(nautilus_launch_desktop_file): use eel vfs capabilities
	to determine if file is safe to launch

2002-06-27  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-volume-monitor.c
	(finish_creating_volume): Save the volume device earlier, since
	nfs and smbfs file systems were causing the function to return
	before the device was being saved.  This fixes a bug where the
	"Unmount Volume" menu item wasn't working on nfs and smbfs mounts.

2002-06-26  Mark McLoughlin  <mark@skynet.ie>

	* src/file-manager/fm-desktop-icon-view.c:
	(desktop_icon_view_property_filter): more typo fixage.

2002-06-25  Shivram U  <shivaram.upadhyayula@wipro.com>
 
	* libnautilus-private/nautilus-directory-background.c
	(make_root_pixmap): Set the Colormap for the GdkPixmap created via
	gdk_pixmap_foreign_new().  Fix for bug #83259. 

2002-06-25  Frank Worsley  <fworsley@shaw.ca>

	* components/tree/nautilus-tree-view.c:
	(got_activation_uri_callback):
	implement viewing/opening and executing of files 
	for the	tree view
	
	* libnautilus-private/nautilus-dnd.c:
	* libnautilus-private/nautilus-link-desktop-file.c:
	* libnautilus-private/nautilus-link-historical.c:
	updated for new desktop-file: command specifier to allow
	proper launching of desktop files
	
	* libnautilus-private/nautilus-program-choosing.c:
	(nautilus_launch_desktop_file):
	new function to launch desktop files with proper exec
	parameter support
	
	* libnautilus-private/nautilus-program-choosing.h:
	define command specifiers in one place
	
	* src/file-manager/fm-directory-view.c:
	(get_executable_text_file_action):
	add "run in terminal" button, partial fix for #41773
	
	(activate_callback), (fm_directory_view_move_copy_items):
	support proper launching of and dnd to desktop files

2002-06-25  Dave Camp  <dave@ximian.com>

	* src/file-manager/fm-icon-view.c (get_icon_drop_target_uri_callback): 