@@ -1,3 +1,8 @@
+2002-06-28  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-desktop-icon-view.c (volume_ops_callback):
+	Quote rawdevice_path. Patch from rajeev.karale@wipro.com
+
 2002-06-27  Frank Worsley  <fworsley@shaw.ca>
 
 	* libnautilus-private/nautilus-program-choosing.c:
